@@ -9,6 +9,8 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Entity
 @Table(name = "\"user\"") // Tabla "user" con comillas
@@ -34,11 +36,26 @@ public class User implements UserDetails {
         if (role == null) return null;
         if (role.getPermissions() == null) return null;
 
-        return role.getPermissions()
-                .stream()
-                .map(Enum::name)
-                .map(SimpleGrantedAuthority::new)
-                .toList();
+        List<SimpleGrantedAuthority> authorities = role.getPermissions().stream()
+                .map(each -> each.name())
+                .map(each -> new SimpleGrantedAuthority(each))
+//                .map(each -> {
+//                    String permission = each.name();
+//                    return new SimpleGrantedAuthority(permission);
+//                })
+                .collect(Collectors.toList());
+
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.role.name()));
+
+        return authorities;
+
+// Authorities
+//        return role.getPermissions()
+//                .stream()
+//                .map(Enum::name)
+//                .map(SimpleGrantedAuthority::new)
+//                .toList();
+
 //                .map(each -> {
 //                    String permission = each.name();
 //                    return new SimpleGrantedAuthority(permission);
